Refactored to use Spring Data JPA.